# rustis

./: Cargo.toml  README.md  a.out  client.rs  lol.cpp
src/: hashtable.rs  main.rs
