# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes

[package]
name = "redis-starter-rust"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.59"                                  
bytes = "1.3.0"                                    
thiserror = "1.0.32"                                
tokio = { version = "1.23.0", features = ["full"] } # async networking
futures = "0.1.25"
mio="0.8"
lazy_static = "1.4.0"
